Closed
Bug 196388
Opened 23 years ago
Closed 23 years ago
crash when using shift-F10 in composer to bring up context menu
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: bugzilla, Assigned: yuanyi21)
Details
(Keywords: crash, regression)
Attachments
(1 file)
|
2.16 KB,
patch
|
john
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
i think this might be a recent regression. when i try to bring up the context
menu in composer via its shortcut, shift-F10, the app crashes.
found using 2003.03.07.10 comm trunk on linux rh7.2.
1. open a composer window; make sure focus (eg, cursor) is in the compose area.
2. bring up the context menu via shift-F10.
results: app crashes. tb info:
Incident ID 17845015
Stack Signature nsWidget::DispatchEvent() 23e294d3
Product ID MozillaTrunk
Build ID 2003030710
Trigger Time 2003-03-07 14:26:24
Platform LinuxIntel
Operating System Linux 2.4.7-10
Module libwidget_gtk.so
URL visited
User Comments shift-F10 to bring up context menu
Trigger Reason SIGSEGV: Segmentation Fault: (signal 11)
Source File Name
/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsWidget.cpp
Trigger Line No. 1503
Stack Trace
nsWidget::DispatchEvent()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsWidget.cpp, line 1503]
nsWidget::DispatchWindowEvent()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsWidget.cpp, line 1385]
nsWidget::OnKey()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsWidget.cpp, line 100]
handle_key_press_event()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsGtkEventHandler.cpp,
line 661]
dispatch_superwin_event()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsGtkEventHandler.cpp,
line 997]
handle_gdk_event()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsGtkEventHandler.cpp,
line 861]
libgdk-1.2.so.0 + 0x17d7f (0x40241d7f)
libglib-1.2.so.0 + 0x11773 (0x40274773)
libglib-1.2.so.0 + 0x11d39 (0x40274d39)
libglib-1.2.so.0 + 0x11eec (0x40274eec)
libgtk-1.2.so.0 + 0x94333 (0x4018f333)
nsAppShell::Run()
[/builds/client/linux22/seamonkey/mozilla/widget/src/gtk/nsAppShell.cpp, line 336]
nsAppShellService::Run()
[/builds/client/linux22/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp,
line 479]
netscape-bin + 0x12331 (0x0805a331)
netscape-bin + 0x12b9b (0x0805ab9b)
libc.so.6 + 0x1c507 (0x403bb507)
| Reporter | ||
Comment 1•23 years ago
|
||
this regressed sometime btwn the 2/28 (works) and 3/6 (broken) builds.
| Reporter | ||
Comment 2•23 years ago
|
||
unable to repro this using control-space on mac 10.2.4.
i don't have win32 in front of me --could someone check if this is an issue there?
Comment 4•23 years ago
|
||
regression between linux trunk 2003030510 and 2003030605, but nothing in that
window appeared relevant.
gdb says:
(gdb) frame 7
#7 0x41683adb in nsWidget::DispatchEvent(nsGUIEvent*, nsEventStatus&)
(this=0x85a7040, aEvent=0xbfffe53c, aStatus=@0x5a5) at nsWidget.cpp:1503
1503 NS_RELEASE(aEvent->widget);
(gdb) p aEvent
$1 = (nsGUIEvent *) 0xbfffe53c
(gdb) p aEvent->widget
$2 = (nsIWidget *) 0x0
Comment 5•23 years ago
|
||
backing out bug 194429 fixed this bug
see bug 134690, the same bug on Windows.
Attachment #116663 -
Flags: superreview?(kin)
Attachment #116663 -
Flags: review?(jkeiser)
Updated•23 years ago
|
Attachment #116663 -
Flags: review?(jkeiser) → review+
Attachment #116663 -
Flags: superreview?(kin) → superreview+
checked in!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•23 years ago
|
||
vrfy'd fixed on linux rh7.2 with 2003.03.14.05. thanks, kyle!
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•