Bug 196388 crash when using shift-F10 in composer to bring up context menu using NS_IF_RELEASE instead of NS_RELEASE