widget/src/gtk/nsWidget.cpp
@@ -1500,7 +1500,7 @@ NS_IMETHODIMP nsWidget::DispatchEvent(nsGUIEvent *aEvent,
   if ((aStatus != nsEventStatus_eIgnore) && (nsnull != mEventListener)) {
     aStatus = mEventListener->ProcessEvent(*aEvent);
   }
-  NS_RELEASE(aEvent->widget);
+  NS_IF_RELEASE(aEvent->widget);
 
   return NS_OK;
 }
