widget/src/photon/nsWidget.cpp
@@ -1105,7 +1105,7 @@ NS_IMETHODIMP nsWidget::DispatchEvent( nsGUIEvent *aEvent, nsEventStatus &aStatu
   if( (aStatus != nsEventStatus_eIgnore) && (nsnull != mEventListener) )
     aStatus = mEventListener->ProcessEvent(*aEvent);
 
-   NS_RELEASE(aEvent->widget);
+   NS_IF_RELEASE(aEvent->widget);
 
   return NS_OK;
 	}
